src/test/resources/valid_programs/if_else__dangling_else.notc
void main() {

if (false)
    if (false)
        printInt(1);
    else
        printInt(2);
}
