src/test/resources/semantic_errors/while_void_is_not_true.notc
void main() {
    while (main() != true) {
    }
}
